2009-06-24  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/mb/hd-atoms.h
	* src/mb/hd-atoms.c: Added _MAEMO_SUPPRESS_ROOT_RECONFIGURATION atom
	* src/util/hd-util.c: Set atom above to 1 around the XRandR calls to 
	  allow fbdev to supress the extra redraw that happens on windows 
	  when rotating the screen.

	* src/home/hd-home.c
	* src/home/hd-home-view-container.c: Misc tweaks to home panning

	Home view kinetic panning

	* src/home/hd-home-view.c
	* src/home/hd-home-view-container.c
	* src/home/hd-home-view-container.h: Added velocity parameter to 
	  _scroll functions, and made them pay attention to it.
	* src/home/hd-home.c: Store the last few mouse drag events and use
	  them to work out an average finger velocity.	
	* data/transitions.ini: Slowed down launcher subview showing transition
	  at MartinG's request

2009-06-24  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Patch from Laszlo Pere for NB#117797.

	* src/home/hd-switcher.c (hd_switcher_waking_fail,
	hd_switcher_wakeup_timeout, hd_switcher_render_manager_notify_state):
	New functions to detect an application that fails to wake up from its
	hibernation.
	(hd_switcher_zoom_in_complete): Set up a timeout before waking up the
	application.

	Release 2.2.58

2009-06-24  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#124405 New contact dialog appears in portrait mode.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify):
	  After hdrm_restack() decide about portraitification.

2009-06-24  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c (layout_notwin):
	  Make sure no line fragments are drawn in midsized notif thumbnails.

2009-06-24  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-title-bar.c (hd_title_bar_set_for_edit_mode): Set title
	after setting the state, not before.  Fixes: NB#124294

2009-06-24  Laszlo Pere  <lpere@blumsoft.eu>

	NB#117318: Able to pan between home views in layout mode.
